# MetricMancer

./: .bashrc  .coverage  .coveragerc  .flake8  .gitignore  .mdformat.toml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Datamodel.md  FileAnalyzer.py  KravOchDesign.md  LICENSE  LICENSE_INFO.md  MD012-no-multiple-blanks-fixer.py  MIGRATION_GUIDE.md  Makefile  MetricMancer_presentation.md  README.md  SoftwareSpecificationAndDesign.md  TDD_PROGRESS_REPORT_Fas1.md  analyze_file.py  analyzer.py  app.py  churn_complexity_example.py  clean_output.py  code_quality.py  collector.py  complexity_report.html  config.py  dummy.html  komplexitet_rapport.html  main.py  metrics.py  pydriller_test.py  pyproject.toml  report.py  report_data.py  report_generator.py  (+7 more)
.github/ISSUE_TEMPLATE/: feature_cognitive_complexity.md
.github/workflows/: python-app.yml
SampleWebpage/: Software KPI Report -.html
docs/: ARCHITECTURE.md  COGNITIVE_COMPLEXITY_USER_GUIDE.md  DEPENDENCY_MANAGEMENT.md  LICENSE_INFO.md  MIGRATION_GUIDE.md  OPENSEARCH_INTEGRATION.md  PYPI_PUBLISHING_GUIDE.md  REFACTORING_PLAN_METRIC_MANCER_APP.md  SETUP.md  SoftwareSpecificationAndDesign.md  TESTING_PYTHON_310.md  app_package_restructuring.md  code_review_strategy.md  complexity_report.html  future_enhancements.md  idl_support.md  implementation_plan_churn_period.md  issue-refactor-stable-main.md  language_support.md  plan_oka_kodkvalitet.md  pr-description-refactor-stable-main.md  refactoring_plan_stable_main.md
docs/chores/: cleanup-root-directory.md  refactoring-plan-release.md
docs/issues/: delta-based-review-estimation.md
docs/presentations/: MetricMancer_presentation.md  MetricMancer_presentation.pptx
docs/refactoring/: NEXT_STEPS_Phase3.md  README.md  REFACTORING_PLAN_analyzer.md  TDD_PROGRESS_REPORT_Fas2_COMPLETE.md  TDD_PROGRESS_REPORT_Fas2_FileProcessor.md  analyzer-refactoring-plan.md  analyzer_refactoring_architecture.md  app_package_restructuring_v2.md  god-class-analysis.md  phase1-complete.md  phase2-complete.md  phase3-complete.md  phase3-implementation-plan.md  phase4-implementation-complete.md  phase4-quick-wins.md
mermaid/: 10_config_cli_flow.md  11_system_error_handling_flow.md  12_kpi_dependencies_status.md  13_main_entry_flow.md  1_overview.md  2_app_run_flow.md  3_analyzer_analyze_flow.md  4_html_report_flow.md  5_cli_report_flow.md  6_report_generator_flow.md  7_scanner_flow.md  8_json_report_flow.md  9_kpi_module_flow.md  datamodel_2025-09-16.puml
output/: .gitkeep
plantuml/: README.md  architecture_config_pattern_2025-10-14.puml  architecture_config_pattern_2025-10-14_description.md  data_model_2025-09-24.puml  data_model_2025-09-24_descriptions.md  datamodel_2025-09-16.puml
schemas/: README.md  metricmancer-v1.schema.json
scripts/: check_licenses.py  code_quality.py  generate_opensearch_mapping.py  run_tests.sh  validate_json_schema.py
src/: analyzer.py  app.py  cli_helpers.py  code_churn.py  collector.py  config.py  debug.py  fileanalyzer.py  main.py  metrics.py  metrics_collector.py  scanner.py
src/analysis/: __init__.py  code_review_advisor.py  hotspot_analyzer.py
src/app/: __init__.py  analyzer.py  app.py  collector.py  file_analyzer.py  file_processor.py  file_reader.py  hierarchy_builder.py  kpi_aggregator.py  kpi_calculator.py  metric_mancer_app.py  scanner.py  timing_tracker.py
src/churn/: __init__.py  code_churn.py
src/complexity/: __init__.py  fileanalyzer.py  metrics.py  metrics_collector.py
src/config/: __init__.py  app_config.py  config_validator.py  defaults.py
src/hotspots/: __init__.py  hotspot_score.py
src/kpis/: __init__.py  base.py  base_kpi.py  complexity.py  hotspot.py  model.py
src/languages/: __init__.py  config.py
src/metricmancer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/parsers/: __init__.py  ada.py  base.py  c.py  cpp.py  csharp.py  go.py  java.py  javascript.py  python.py  typescript.py
src/report/: __init__.py  cli_report_format.py  cli_report_generator.py  file_helpers.py  file_info.py  git_repo_info.py  grading.py  html_report_format.py  report_data.py  report_data_analyzer.py  report_data_collector.py  report_format_strategy.py  report_generator.py  report_generator_factory.py  report_helpers.py  report_interface.py  report_renderer.py  report_writer.py  root_info.py
src/templates/: report.html
src/utilities/: __init__.py  cli_helpers.py  code_review_advisor.py  debug.py  git_cache.py  git_helpers.py  hotspot_analyzer.py  path_helpers.py  scanner.py  tree_printer.py
templates/: report.html
test_output/: review.md
tests/: test_analyzer.py  test_app.py  test_cli_helpers.py  test_code_churn.py  test_collector.py  test_json_reporting.py  test_main.py  test_main_helpers.py  test_main_multi_format.py  test_main_shared_ownership.py  test_main_simplification_tdd.py  test_report_data.py  test_report_data_analyzer.py  test_report_data_collector.py  test_report_generator.py  test_report_renderer.py  test_root_info.py  test_scanner.py
tests/analysis/: __init__.py  test_code_review_advisor.py  test_hotspot_analyzer.py
tests/app/: test_aggregated_authors_pytest.py  test_analyzer.py  test_analyzer_churn_integration.py  test_analyzer_shared_ownership.py  test_churn_detection.py  test_churn_kpi_path_mismatch.py  test_code_churn_analyzer.py  test_code_churn_analyzer_edge.py  test_code_ownership_kpi.py  test_complexity_analyzer.py  test_complexity_analyzer_edge.py  test_debug.py  test_deep_merge_scan_dirs.py  test_file_analyzer.py  test_file_analyzer_cognitive_complexity.py  test_file_processor.py  test_file_reader.py  test_hierarchy_builder.py  test_hotspot_kpi_edge.py  test_issue_40_cache_prebuilding.py  (+17 more)
(+191 files in other folders)
