[project]
name = "metricmancer"
version = "3.1.0"
description = "Multi-language software analytics tool for code quality, maintainability, and technical risk. Calculates cyclomatic complexity, code churn, hotspots, and more. Generates CLI, HTML, and JSON reports."
authors = [
  { name = "Thomas Lindqvist", email = "fixaren54_eon@icloud.com" }
]
license = "MIT"
dependencies = [
  "jinja2",
  "pytest",
  "pytest-cov",
  "coverage",
  "pydriller",
  "tqdm",
  "PyYAML",
  "autopep8",
  "flake8",
  "pip-licenses"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = [
    "src",
    "tests", 
    "."
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.autopep8]
max_line_length = 120
aggressive = 1

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info"
]