[project]
name = "metricmancer"
version = "3.3.1"
description = "Multi-language software analytics tool for code quality, maintainability, and technical risk. Calculates cyclomatic and cognitive complexity, code churn, hotspots, and more. Generates CLI, HTML, and JSON reports."
authors = [
  { name = "Thomas Lindqvist", email = "fixaren54_eon@icloud.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jinja2>=3.1.0",
  "tqdm>=4.65.0",
  "PyYAML>=6.0",
  "pip-licenses>=4.0",
  "unidiff>=0.7.5",
  "tree-sitter>=0.25.0",
  "tree-sitter-language-pack>=0.10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "coverage>=7.0.0",
  "autopep8>=2.0.0",
  "flake8>=6.0.0",
  "mdformat>=0.7.17",
  "mdformat-gfm>=0.3.5",
  "mdformat-tables>=0.4.1",
  "jsonschema>=4.0.0",
  "toml>=0.10.0",
  "requests>=2.0.0",
  "pipdeptree>=2.13.0"
]
build = [
  "build>=1.0.0",
  "twine>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/CmdrPrompt/MetricMancer"
Repository = "https://github.com/CmdrPrompt/MetricMancer"
Issues = "https://github.com/CmdrPrompt/MetricMancer/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --ignore=tests/integration"
pythonpath = [
    "src",
    "tests", 
    "."
]
markers = [
    "integration: marks tests as integration tests (excluded by default, run with: pytest tests/integration/)"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[tool.autopep8]
max_line_length = 120
aggressive = 1

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info"
]